Minor rename and update copyright notice.     - Add copyright notice to Classes.gs     - Remove FRED prefix to classes that are more generic than FRED     - Add count to search results text     - Renamed function name to be more clear     - Check for empty APIKey and throw error

--- a/Search.html
+++ b/Search.html
@@ -54,8 +54,8 @@
       function onFailure(error) {
         showMessage(error.message);
       }
-      function onSuccess(obj) {
-        showMessage('Done.');
+      function onSuccess(count) {
+        showMessage(`Done. ${count} result(s).`);
       }
     </script>
   </head>
